# pyimgano

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.bundle-watch  Dockerfile.sonar  MANIFEST.in  README.md  README_cn.md  README_ja.md  README_ko.md  SECURITY.md  compose.bundle-watch.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_repro.yml  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  sonar.yml  sonarcloud.yml
.serena/: project.yml
benchmarks/: README.md  benchmark_classical.py  benchmark_deeplearning.py  benchmark_industrial_ci_micro.py  benchmark_preprocessing.py  run_all_benchmarks.py
benchmarks/configs/: README.md  official_manifest_industrial_v4_cpu_offline.json  official_mvtec_industrial_v4_cpu_offline.json  official_visa_industrial_v4_cpu_offline.json
docs/: ALGORITHM_SELECTION_GUIDE.md  ANOMALIB_CHECKPOINTS.md  ARCHITECTURE_CLASSICAL_PIPELINES.md  ARCHITECTURE_DEEP_CONTRACTS.md  BENCHMARK_GETTING_STARTED.md  BENCHMARK_PUBLICATION.md  CALIBRATION_AUDIT.md  CAPABILITY_ASSESSMENT.md  CLI_REFERENCE.md  COMPARISON.md  CORE_MODELS.md  CORE_SELECTION_ON_EMBEDDINGS.md  DATASET_CONVERTERS.md  DATASET_MVTEC_AD2_NOTES.md  DATASET_REAL_WORLD_IAD_NOTES.md  DEEP_LEARNING_MODELS.md  DEEP_MODELS_STATUS.md  EVALUATION_AND_BENCHMARK.md  FALSE_POSITIVE_DEBUGGING.md  FEATURE_EXTRACTORS.md  FIRST_TIER_ROADMAP.md  INDUSTRIAL_EMBEDDING_PLUS_CORE.md  INDUSTRIAL_FASTPATH.md  INDUSTRIAL_INFERENCE.md  INDUSTRIAL_MVP_LOOP.md  INDUSTRIAL_PREPROCESSING_COOKBOOK.md  INDUSTRIAL_QUICKPATH.md  INDUSTRIAL_REFERENCE_PROJECTS.md  MANIFEST_DATASET.md  MIGRATION.md  MODEL_CARDS.md  MODEL_INDEX.md  MODEL_METADATA_CONTRACT.md  OPTIONAL_DEPENDENCIES.md  PAPER_TO_MODULE_MAP_V4.md  PAPER_TO_MODULE_MAP_V5.md  PATCHCORE_INSPECTION_CHECKPOINTS.md  PLUGINS.md  PREPROCESSING.md  PUBLISHING.md  (+33 more)
docs/plans/: 2026-02-20-mvtec-visa-hybrid-ad-pipeline-design.md  2026-02-20-mvtec-visa-hybrid-ad-pipeline.md  2026-02-21-anomalib-anomalydino-expansion-design.md  2026-02-21-anomalib-anomalydino-expansion.md  2026-02-21-anomalib-benchmark-coverage-design.md  2026-02-21-anomalib-benchmark-coverage.md  2026-02-21-cli-presets-industrial-balanced-design.md  2026-02-21-cli-presets-industrial-balanced.md  2026-02-21-industrial-pixel-first-upgrade-design.md  2026-02-21-industrial-pixel-first-upgrade.md  2026-02-21-openclip-backends-design.md  2026-02-21-openclip-backends.md  2026-02-22-cli-presets-fast-accurate-and-model-discovery-design.md  2026-02-22-cli-presets-fast-accurate-and-model-discovery.md  (+182 more)
examples/: README.md  advanced_preprocessing_example.py  all_models_demo.py  anomalydino_mvtec_visa.py  augmentation_example.py  benchmark_example.py  convert_mvtec_ad2_to_manifest.py  convert_rad_to_manifest.py  embedding_plus_core_ecod.py  embedding_plus_core_mahalanobis_shrinkage.py  feature_extractors_demo.py  feature_pipeline_core_detectors.py  industrial_infer_numpy.py  industrial_score_ensemble.py  industrial_tiling_infer.py  mambaad_quickstart.py  manifest_benchmark_demo.sh  ocsvm_example.py  openclip_mvtec_visa.py  openclip_plus_core_knn.py  pixel_first_compare.py  pixel_first_ssim_defects.py  preprocessing_example.py  quick_start.py  softpatch_mvtec_visa.py  sota_algorithms_example.py  synthesis_generate_dataset_demo.py  temp.py  torchvision_embeddings_classical_demo.py  utilities_example.py  visualization_example.py
pyimgano/: __init__.py  __main__.py  base.py  benchmark.py  bundle_cli.py  bundle_cli_helpers.py  bundle_rendering.py  cli.py  cli_common.py  cli_discovery_options.py  cli_discovery_rendering.py  cli_listing.py  cli_output.py  cli_presets.py  datasets_cli.py  defects_cli.py  demo_cli.py  discovery.py  doctor_cli.py  doctor_rendering.py  evaluate_cli.py  evaluation.py  feature_cli.py  infer_cli.py  infer_cli_discovery.py  infer_cli_inputs.py  infer_cli_onnx.py  infer_cli_profile.py  manifest_cli.py  onnx_export_cli.py  plugins.py  pyim_app.py  pyim_audit_rendering.py  pyim_cli.py  pyim_cli_options.py  pyim_cli_rendering.py  pyim_contracts.py  pyim_list_spec.py  pyim_section_views.py  robust_cli.py  (+12 more)
tests/: conftest.py  dummy_pyimgano_plugin.py  test_aaclip.py  test_adaclip.py  test_adoption_flow_smoke.py  test_ae1svm.py  test_ae_resnet_unet_contract.py  test_alad.py  test_anisotropic_diffusion.py  test_anogen.py  test_anogen_adapter.py  test_anomalib_backend_optional.py  test_anomalib_backend_wrapper.py  test_anomalydino_core.py  test_anomalydino_numpy_inputs.py  test_anomalydino_registry.py  test_architecture_boundaries.py  test_array_feature_cache.py  test_audit_third_party_notices.py  test_augmentation_registry.py  test_backend_hardening.py  test_background_subtraction.py  test_base_deep_training_loop.py  test_base_detector_confidence.py  test_base_detector_fit_predict.py  test_base_detector_params.py  test_base_detector_pot_threshold.py  test_base_detector_predict_proba.py  test_base_detector_score_samples.py  test_base_detector_thresholding.py  test_basecv_native_base.py  test_basecv_numpy_inputs.py  test_baseml_native_base.py  test_benchmark_config.py  test_benchmark_configs_official.py  test_benchmark_industrial_ci_micro_cli_args_v16.py  test_benchmark_presets.py  test_benchmark_service.py  test_bundle_cli.py  test_bundle_cli_helpers.py  (+612 more)
tools/: audit_adoption_docs.py  audit_audited_fastpath_docs.py  audit_benchmark_configs.py  audit_deploy_smoke_docs.py  audit_import_costs.py  audit_no_reference_clones_tracked.py  audit_no_tensorrt_imports.py  audit_pixel_map_models.py  audit_public_api.py  audit_publication_contract.py  audit_recipe_starters.py  audit_registry.py  audit_release_checklist.py  audit_release_surface.py  audit_release_version.py  audit_repo_links.py  audit_robustness_compare_docs.py  audit_score_direction.py  audit_third_party_notices.py  audit_translation_entrypoints.py  clone_reference_repos.sh  fetch_sonar_issues.py  generate_model_index.py  generate_tag_history.py  run_sonar_local.sh
(+600 files in other folders)
