[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimgano"
version = "0.2.0"
description = "Enterprise-Grade Visual Anomaly Detection Toolkit with 37+ algorithms and 80+ operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PyImgAno Contributors", email = "pyimgano@example.com"},
]
maintainers = [
    {name = "PyImgAno Contributors", email = "pyimgano@example.com"},
]
keywords = [
    "anomaly-detection",
    "computer-vision",
    "deep-learning",
    "machine-learning",
    "image-processing",
    "industrial-inspection",
    "defect-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5.1",
    "scikit-learn>=0.22.0",
    "scikit-image>=0.18.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "pyod>=1.1.0,<3.0.0",  # ECOD/COPOD require >=0.9.7, scipy fix in >=1.0.9
    "joblib>=1.0.0",
    "matplotlib>=3.3.0",
    "numba>=0.51",
]

[project.optional-dependencies]
diffusion = [
    "diffusers>=0.21.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
viz = [
    "seaborn>=0.11.0",
]
anomalib = [
    "anomalib>=0.10.0",
]
faiss = [
    "faiss-cpu>=1.7.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-napoleon>=0.7",
]
all = [
    "pyimgano[backends,diffusion,dev,docs,viz]",
]
backends = [
    "pyimgano[anomalib,faiss]",
]

[project.urls]
Homepage = "https://github.com/jhlu2019/pyimgano"
Documentation = "https://github.com/jhlu2019/pyimgano#readme"
Repository = "https://github.com/jhlu2019/pyimgano"
"Bug Tracker" = "https://github.com/jhlu2019/pyimgano/issues"
Changelog = "https://github.com/jhlu2019/pyimgano/blob/main/CHANGELOG.md"

[project.scripts]
pyimgano-benchmark = "pyimgano.cli:main"

[tool.setuptools.packages.find]
include = ["pyimgano*"]

[tool.setuptools.package-data]
pyimgano = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["pyimgano"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=pyimgano",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["pyimgano"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pyod.*",
    "sklearn.*",
    "torch.*",
    "torchvision.*",
    "numba.*",
]
ignore_missing_imports = true

# Ruff configuration (modern alternative to flake8)
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["F401", "F811"]

[tool.ruff.isort]
known-first-party = ["pyimgano"]
